--- a/Chapter 3.ipynb
+++ b/Chapter 3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'Connected: postgres@analysis'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,15 +46,18 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/analysis\n",
-      "(psycopg2.errors.DuplicateTable) relation \"char_data_types\" already exists\n",
-      "\n",
-      "[SQL: CREATE TABLE char_data_types(\n",
-      "varchar_column varchar(10),\n",
-      "char_column char(10),\n",
-      "text_column text\n",
-      ");]\n",
-      "(Background on this error at: http://sqlalche.me/e/f405)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,16 +87,18 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/analysis\n",
-      "(psycopg2.errors.UndefinedTable) relation \"char_data_types\" does not exist\n",
-      "LINE 1: INSERT INTO char_data_types\n",
-      "                    ^\n",
-      "\n",
-      "[SQL: INSERT INTO char_data_types\n",
-      "VALUES\n",
-      "('abc', 'abc', 'abc'),\n",
-      "('defghi', 'defghi', 'defghi');]\n",
-      "(Background on this error at: http://sqlalche.me/e/f405)\n"
+      "2 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +136,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +229,7 @@
        "[]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +237,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "CREATE TABLE peope(\n",
+    "CREATE TABLE people(\n",
     "id serial,\n",
     "person_name varchar(100)\n",
     ");"
@@ -751,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +773,7 @@
        "<table>\n",
        "    <tr>\n",
        "        <th>timestamp_column</th>\n",
-       "        <th>timestamp_column_1</th>\n",
+       "        <th>casted</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>2018-12-31 07:00:00+01:00</td>\n",
@@ -795,7 +800,7 @@
        " (datetime.datetime(2019, 10, 25, 16, 49, 26, 801488, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=120, name=None)), '2019-10-25')]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +808,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT timestamp_column, CAST(timestamp_column AS varchar(10))\n",
+    "SELECT timestamp_column, CAST(timestamp_column AS varchar(10)) AS casted\n",
     "FROM date_time_types;"
    ]
   },
@@ -1057,9 +1062,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
